<!-- pom.xml -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>rabbitseries.aoc.java</groupId>
    <artifactId>aocjava</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging><!-- Aggregator -->
    <modules>
        <module>Java/2023</module>
        <module>Java/datamodel</module>
        <module>Java/launcher</module>
    </modules>
    <build>
        <sourceDirectory>main</sourceDirectory>
        <testSourceDirectory>test</testSourceDirectory>
        <testResources>
            <testResource>
                <directory>test/resources</directory>
                <targetPath>${project.artifactId}</targetPath>
            </testResource>
        </testResources>
        <resources>
            <resource>
                <directory>resources</directory>
                <excludes>
                    <exclude>Legacy/**/input.txt</exclude>
                </excludes>
                <targetPath>${project.artifactId}</targetPath>
            </resource>
        </resources>
        <pluginManagement>

            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${project.maven.compiler.plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-toolchains-plugin</artifactId>
                    <version>${project.maven.toolchains.plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>toolchain</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <toolchains>
                            <jdk>
                                <version>1.8</version>
                                <vendor>openjdk</vendor>
                            </jdk>
                        </toolchains>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${project.maven.shade.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${project.maven.surefire.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${project.maven.failsafe.plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${project.exec.maven.plugin.version}</version>
                </plugin>

            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <artifactId>exec-maven-plugin</artifactId>
                <groupId>org.codehaus.mojo</groupId>
                <configuration>
                    <skip>true</skip>
                    <!-- I think this should not be annoated as required in exec:java goal
                    https://github.com/mojohaus/exec-maven-plugin/blob/205d364fab63e3d9fdb55690112f9e2e33d79866/src/main/java/org/codehaus/mojo/exec/ExecJavaMojo.java#L76-L77 -->
                    <!-- Like this executor in exec:exec goal -->
                    <!--
                    https://github.com/mojohaus/exec-maven-plugin/blob/205d364fab63e3d9fdb55690112f9e2e33d79866/src/main/java/org/codehaus/mojo/exec/ExecMojo.java#L110-L111 -->
                    <!-- And this executor in exec:exec goal should check skip before check
                    executable
                    https://github.com/mojohaus/exec-maven-plugin/blob/205d364fab63e3d9fdb55690112f9e2e33d79866/src/main/java/org/codehaus/mojo/exec/ExecMojo.java#L362-L376-->
                    <executable>FOOBAR</executable>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
        </plugins>

    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.hipparchus</groupId>
                <artifactId>hipparchus</artifactId>
                <version>4.0.1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.13.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>rabbitseries.aoc.java.year2023</groupId>
                <artifactId>year2023</artifactId>
                <version>${project.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>rabbitseries.aoc.java.datamodel</groupId>
                <artifactId>datamodel</artifactId>
                <version>${project.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>rabbitseries.aoc.java.launcher</groupId>
                <artifactId>launcher</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <parent.basedir>${basedir}</parent.basedir>
        <year2023.dayroot>${parent.basedir}/Java/2023/main/year2023</year2023.dayroot>

        <project.maven.compiler.plugin.version>3.14.0</project.maven.compiler.plugin.version>
        <project.maven.toolchains.plugin.version>3.2.0</project.maven.toolchains.plugin.version>
        <project.maven.shade.plugin.version>3.6.0</project.maven.shade.plugin.version>
        <project.maven.surefire.plugin.version>3.5.3</project.maven.surefire.plugin.version>
        <project.maven.failsafe.plugin.version>3.5.3</project.maven.failsafe.plugin.version>
        <project.exec.maven.plugin.version>3.5.1</project.exec.maven.plugin.version>
    </properties>
</project>